--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>uNmINeD</title>
 
-    <meta charset="EUC-KR" />
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
     <!-- OpenLayers CSS -->
