--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>uNmINeD</title>
+    <title>SAVER MAP</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
@@ -28,6 +28,9 @@
     <!-- uNmINeD JS -->
     <script type="text/javascript" src="unmined.openlayers.js"></script>
 
+    <!-- 아이콘 -->
+    <script src="https://kit.fontawesome.com/dbb41a74f1.js" crossorigin="anonymous"></script>
+
     <style type="text/css">
         html,
         body {
@@ -37,8 +40,95 @@
             padding: 0;
         }
 
-        #map {
+        header {
+            display: flex;
+            flex-flow: column wrap;
+            justify-content: center;
+            align-content: center;
+            height: 78px;
+            position: relative; /* 부모 요소에 position을 추가합니다. */
+        }
+
+        header h1 {
+            font-size: 1.5em;
+            text-align: center;
+            margin: 3px;
+            display: flex; /* 내부 요소들을 가로로 정렬하기 위해 flex를 사용합니다. */
+            justify-content: center;
+            align-items: center; /* 내부 요소들을 세로로 중앙 정렬합니다. */
+        }
+
+        header h1 img {
+            z-index: 3;
+            position: absolute;
+            width: 20px;
+            left: 15px;
+            cursor: pointer;
+        }
+
+        header h1 div{
+            width: auto;
+        }
+
+        header #search-window{
+            width: calc(100% - 10px);
+            box-sizing: border-box;
+            height: 30px;
+            margin: 5px;
+            padding: 0 10px;
+            background-color: #F2F3F5;
+            border: none;
+            outline: none;
+        }
+
+        .sub-menu {
+            position: absolute;
+            top: 50%;
+            left: 0;
+            transform: translate(0,-50%);
+            width: 200px;
             height: 100%;
+            background-color: white;
+            display: none; /* 초기에는 보이지 않도록 설정합니다. */
+            z-index: 2; /* 배경에 가려지지 않도록 z-index를 설정합니다. */
+        }
+
+        #iconBox{
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: flex-end;
+        }
+
+        .icon{
+            font-size: 2.5rem;
+            color: black;
+            text-decoration: none;
+        }
+        .no_dot {
+            margin: 20px;
+            padding: 0;
+            list-style-type: none;
+        }
+        .no_dot li{
+            display: inline-block; 
+        }
+
+        /* 추가된 스타일 */
+        .dark-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5); /* 투명한 검은색 배경 */
+            z-index: 1; /* 배경 위로 올려서 보이도록 합니다. */
+            display: none; /* 초기에는 숨깁니다. */
+        }
+
+        #map {
+            height: calc(100% - 78px);
             width: 100%;
             image-rendering: pixelated;
         }
@@ -65,11 +155,19 @@
 </head>
 
 <body>
+    <header>
+        <h1>
+            <img src="images/menu.png" alt="메뉴" id="menuBtn">
+            <div>SAVER MAP</div>
+        </h1>
+        <input type="text" id="search-window" name="q" placeholder="장소, 주소, 버스 검색">
+    </header>
+
     <div id="map"></div>
     
     <script type="text/javascript">
 
-        document.title = UnminedMapProperties.worldName + " - " + document.title;
+        //document.title = UnminedMapProperties.worldName + " - " + document.title;
 
         if (UnminedCustomMarkers && UnminedCustomMarkers.isEnabled && UnminedCustomMarkers.markers) {
             UnminedMapProperties.markers = UnminedMapProperties.markers.concat(UnminedCustomMarkers.markers);
@@ -83,6 +181,36 @@
 
         unmined.map('map', UnminedMapProperties, UnminedRegions);
 
+    </script>
+
+    <!-- 보조메뉴 -->
+    <div class="sub-menu" id="subMenu" style="display: none;">
+        <div id="iconBox">
+            <ul class="no_dot">
+                <li><a href="https://github.com/kevalsil/map" class="icon fa-brands fa-github" target="_blank"></a></li>
+                <li><a href="https://kevalsil.com/" class="icon fa-solid fa-house" target="_blank"></a></li>
+            </ul>
+        </div>
+    </div>
+
+    <!-- 다크오버레이 -->
+    <div class="dark-overlay" id="overlay"></div>
+
+    <script>
+        // 이미지 클릭 시 보조 메뉴창 표시/숨기기
+        document.getElementById('menuBtn').addEventListener('click', function() {
+            var subMenu = document.getElementById('subMenu');
+            var overlay = document.getElementById('overlay');
+
+            // 보조 메뉴창의 표시 여부를 토글합니다.
+            if (subMenu.style.display === 'none') {
+                subMenu.style.display = 'block';
+                overlay.style.display = 'block'; // 배경 오버레이를 보이도록 합니다.
+            } else {
+                subMenu.style.display = 'none';
+                overlay.style.display = 'none'; // 배경 오버레이를 숨깁니다.
+            }
+        });
     </script>
 </body>
 
